@@ -4,10 +4,9 @@ import fuzs.puzzleslib.api.core.v1.Proxy;
 import net.minecraft.client.multiplayer.ClientPacketListener;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.level.Level;
 
+import java.util.Collections;
 import java.util.List;
 
 public interface ProxyImpl extends Proxy {
@@ -44,6 +43,6 @@ public interface ProxyImpl extends Proxy {
 
     @Override
     default List<Component> splitTooltipLines(Component component) {
-        return List.of(component);
+        return Collections.singletonList(component);
     }
 }
